[约束布局]新增:动态添加view

--- a/ConstraintLayout/constraintlayout/src/main/AndroidManifest.xml
+++ b/ConstraintLayout/constraintlayout/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name="com.hencoder.ConstraintSetX" />
         <activity android:name="com.hencoder.LinearActivity" />
         <activity android:name="com.hencoder.FlowActivity" />
+        <activity android:name="com.hencoder.DynamicLayout"/>
         <activity android:name="com.hencoder.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
